<merge xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="10dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_photo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                app:civ_border_color="@color/black"
                app:civ_border_width="2dp"/>

            <TextView
                android:id="@+id/change_profile_photo_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_photo"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:layout_centerHorizontal="true"
                android:textColor="@color/blue"
                android:layout_below="@id/profile_photo"/>


            <!-- *********** For editing text information ************ -->
            <LinearLayout
                android:id="@+id/edit_profile_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginVertical="50dp"
                android:layout_below="@id/change_profile_photo_tv">


                <!-- For username section -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_weight="10"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_username"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="90"
                        android:textColorHint="@color/grey"
                        >

                        <AutoCompleteTextView
                            android:id="@+id/profile_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_username"
                            android:imeOptions="actionNext"
                            android:textColor="@color/black"
                            android:textColorHint="@color/grey"
                            android:inputType="textNoSuggestions"
                            android:maxLines="1"
                            android:textIsSelectable="false"/>

                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>

                <!-- For display name section -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_weight="10"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_display_name"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="90"
                        android:textColorHint="@color/grey"
                        >

                        <AutoCompleteTextView
                            android:id="@+id/profile_display_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_display_name"
                            android:imeOptions="actionNext"
                            android:textColor="@color/black"
                            android:textColorHint="@color/grey"
                            android:inputType="textPersonName"
                            android:maxLines="1"
                            android:textIsSelectable="false"/>

                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>

                <!-- For user bio / description section -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_weight="10"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_description"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="90"
                        android:textColorHint="@color/grey"
                        >

                        <AutoCompleteTextView
                            android:id="@+id/profile_description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_description"
                            android:textColor="@color/black"
                            android:textColorHint="@color/grey"
                            android:inputType="textMultiLine"
                            android:textIsSelectable="false"/>

                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>

                <!-- For display name section -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_weight="10"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_website"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="90"
                        android:textColorHint="@color/grey"
                        >

                        <AutoCompleteTextView
                            android:id="@+id/profile_website"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_website"
                            android:imeOptions="actionDone"
                            android:textColor="@color/black"
                            android:textColorHint="@color/grey"
                            android:inputType="textWebEmailAddress"
                            android:maxLines="1"
                            android:textIsSelectable="false"/>

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </LinearLayout>


            <!-- ******** For Private Information section ******** -->
            <TextView
                android:id="@+id/edit_profile_private_information_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Private Information"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_below="@id/edit_profile_linear_layout"
                android:layout_centerHorizontal="true"/>

            <LinearLayout
                android:id="@+id/edit_profile_pvt_info_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginVertical="20dp"
                android:layout_below="@id/edit_profile_private_information_tv">


                <!-- For email address section -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_weight="10"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_email_address"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="90"
                        android:textColorHint="@color/grey"
                        >

                        <AutoCompleteTextView
                            android:id="@+id/profile_email_address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_email"
                            android:imeOptions="actionNext"
                            android:textColor="@color/black"
                            android:textColorHint="@color/grey"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:textIsSelectable="false"/>

                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>

                <!-- For phone number section -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_weight="10"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_phone_number"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="90"
                        android:textColorHint="@color/grey"
                        >

                        <AutoCompleteTextView
                            android:id="@+id/profile_phone_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_phone_number"
                            android:imeOptions="actionDone"
                            android:textColor="@color/black"
                            android:textColorHint="@color/grey"
                            android:inputType="phone"
                            android:maxLines="1"
                            android:textIsSelectable="false"/>

                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>

            </LinearLayout>



        </RelativeLayout>


    </ScrollView>

</merge>